fix namespace and reference protobuf

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -22,12 +22,12 @@ akka.actor {
   serializers {
     akka-persistence-message = "akka.persistence.serialization.MessageSerializer"
     akka-persistence-snapshot = "akka.persistence.serialization.SnapshotSerializer"
-    protobuf = "de.mb.akka.protobufexample.utils.ProtobufSerializer"
+    protobuf = "io.adiwave.akka.persistenceprotobuf.utils.ProtobufSerializer"
   }
   serialization-bindings {
     "akka.persistence.serialization.Message" = akka-persistence-message
     "akka.persistence.serialization.Snapshot" = akka-persistence-snapshot
-    "de.mb.akka.protobufexample.actors.GarageActor$GarageEvt" = protobuf
+    "io.adiwave.akka.persistenceprotobuf.actors.GarageActor$GarageEvt" = protobuf
     "java.io.serializable" = none
   }
   serialization-identifiers {
@@ -38,8 +38,8 @@ akka.actor {
 
 pg-persistence {
   db {
-    user = "ifuser"
-    password = "ifpw"
-    url = "jdbc:postgresql://localhost:5432/ifdb"
+    user = "${env.user}"
+    password = "${env.pass}"
+    url = "jdbc:postgresql://localhost:5432/${env.dbname}"
   }
 }
